8144480: Remove test dependencies on sun.misc.BASE64Encoder and BASE64Decoder
Reviewed-by: alanb, amlu, psandoz, weijun